resolve layout issue

--- a/src/scss/Components/Screens/_aboutus.scss
+++ b/src/scss/Components/Screens/_aboutus.scss
@@ -195,9 +195,7 @@
 }
 
 .card-image {
-  width: 160px;
-  height: 160px;
+  width: 170px;
+  height: 170px;
   padding: 10px;
-
-  object-fit: cover;
 }
